# kdump-elftool

./: .gitignore  INSTALL  Makefile.am  README  README.rst  btree.h  configure.ac  diskdumpmem.c  elfc.c  kdump-arm.c  kdump-arm64.c  kdump-elftool.1  kdump-elftool.c  kdump-elftool.h  kdump-i386.c  kdump-mips.c  kdump-ppc32.c  kdump-x86.h  kdump-x86_64.c  kdump_gdbinit  makedumpfile.c  oldmem.c  qemumem.c  rawfile.c
kernel-patches/: 0001-Partially-revert-MIPS-Remove-old-core-dump-functions.patch  0002-kdump-Add-physical-pgd-address-to-VMCOREINFO.patch  0006-x86-Provide-context-switch-point-for-kdump-process-t.patch
kernel-patches/4.9/: 0003-kdump-mips-Add-necessary-items-for-core-extraction.patch  0004-MIPS-kdump-Add-some-more-symbols.patch  0005-mips-Add-an-option-to-set-up-exception-frames-for-gd.patch
